# cmp3060m_1920_project_submission

./: README.md
cmp3060m_1920_project/: CMakeLists.txt  package.xml
cmp3060m_1920_project/config/mux_params/: mux_config.yaml
cmp3060m_1920_project/config/navi_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap.yaml  navi_params_references.txt  safe_teleop_stage_params.yaml
cmp3060m_1920_project/config/rviz/: amcl.rviz  rviz_references.txt
cmp3060m_1920_project/launch/: amcl.launch  gmapping.launch  study_a1.launch  study_a2.launch  study_b1.launch  study_b2.launch  study_bX_nav_core.launch  study_bX_nav_source.launch  study_c1.launch  study_c2.launch  study_cX_nav_core.launch  study_cX_nav_source.launch
cmp3060m_1920_project/maps/: maps_references.txt  user_study.pgm  user_study.yaml
cmp3060m_1920_project/nodes/autonomy/: autonomy_pure.py  single_goal.py
cmp3060m_1920_project/nodes/blended/: blended_control.py  blended_teleop.py
cmp3060m_1920_project/nodes/teleop/: teleop_pure.py
cmp3060m_1920_project/pwc_model/: my_wheelchair.gv  my_wheelchair.urdf
cmp3060m_1920_project/simulation/: dynamic_study.world  static_study.world  world_references.txt
cmp3060m_1920_project/simulation/models/: model_references.txt
cmp3060m_1920_project/simulation/models/arrow_green/: model.config  model.sdf
cmp3060m_1920_project/simulation/models/bed/: model.config  (+1 more)
cmp3060m_1920_project/src/: cmp3060m_1920_project.code-workspace
cmp3060m_1920_project/testing/: test_autonomy_pure.py  test_teleop_pure.py
(+18 files in other folders)
